--- a/UI/WorkbenchWindow.xaml
+++ b/UI/WorkbenchWindow.xaml
@@ -1,7 +1,7 @@
-<Window x:Class="VoiceR.AnalyzeWindow"
+<Window x:Class="VoiceR.WorkbenchWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="VoiceR - UI Analysis">
+        Title="VoiceR - Workbench">
     <Grid Padding="16">
         <Grid.ColumnDefinitions>
             <ColumnDefinition x:Name="LeftColumn" Width="300" MinWidth="150"/>
