--- a/UI/WorkbenchWindow.xaml
+++ b/UI/WorkbenchWindow.xaml
@@ -169,7 +169,9 @@
             <Grid Grid.Column="2" Margin="8,0,0,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 
                 <TextBlock Grid.Row="0"
@@ -179,7 +181,12 @@
                            FontSize="14"
                            Margin="0,0,0,8"/>
                 
-                <ScrollViewer Grid.Row="1"
+                <TextBlock Grid.Row="1"
+                           x:Name="ResponseDetails"
+                           Visibility="Collapsed"
+                           Margin="0,0,0,8"/>
+                
+                <ScrollViewer Grid.Row="2"
                               VerticalScrollBarVisibility="Auto"
                               HorizontalScrollBarVisibility="Auto">
                     <TextBox x:Name="ResponseJsonTextBox"
@@ -193,6 +200,15 @@
                              Background="{ThemeResource LayerFillColorDefaultBrush}"
                              BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"/>
                 </ScrollViewer>
+                
+                <Button Grid.Row="3"
+                        x:Name="ExecuteButton"
+                        Content="Execute"
+                        Padding="24,8"
+                        Margin="0,12,0,0"
+                        HorizontalAlignment="Center"
+                        IsEnabled="False"
+                        Click="ExecuteButton_Click"/>
             </Grid>
         </Grid>
     </Grid>
